[metadata]
name = EpikCord.py
version = "0.4.11"
description = "A Modern API wrapper for Discord, Intended for replacement of the now discontinued Discord.py library"
long_description = file:README.md
license_files = LICENSE.md
long_description_content_type =  text/markdown
keywords = EpikCord.py, Discord, API, Bot, EpikCord
classifiers = 
    Development Status :: 3 - Alpha,      
    Intended Audience :: Developers,      
    Topic :: Software Development :: Build Tools,
    License :: OSI Approved :: MIT License,   
    Programming Language :: Python :: 3.8,
  
license = MIT
author = EpikCord
url = "https://github.com/EpikCord/EpikCord.py"

[options]
zip_safe = False
include_package_data = True

packages = 
    EpikCord
    EpikCord.managers
    EpikCord.ext
    EpikCord.ext.commands
install_requires = 
    aiohttp; python_version == ">=3.8"

[options.package_data]
* = *.txt *.md

[options.extras_require]
voice = PyNaCl
docs = sphinx==4.4.0;sphinxcontrib_trio==1.1.2;sphinxcontrib-websupport;typing-extensions