[metadata]
name = EpikCord.py
version = 0.4.13
description = A Modern API wrapper for Discord.
long_description = file: README.md
license_files = LICENSE.md
long_description_content_type =  text/markdown
keywords = EpikCord.py, Discord, API, Bot, EpikCord
classifiers = 
    Development Status :: 3 - Alpha,      
    Intended Audience :: Developers,      
    Topic :: Software Development :: Build Tools,
    License :: OSI Approved :: MIT License,   
    Programming Language :: Python :: 3.8,
  
license = MIT
author = EpikCord
url = https://github.com/EpikCord/EpikCord.py

[options]
zip_safe = False
include_package_data = True

packages = 
    EpikCord
    EpikCord.managers
install_requires = 
    aiohttp; python_version == ">=3.8"

[options.package_data]
* = *.txt *.md

[options.extras_require]
voice = PyNaCl